--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
-    "@emotion/core": "^10.0.35",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -27,6 +26,7 @@
     "bootstrap": "^4.5.3",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
@@ -41,7 +41,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
-    "history": "^5.0.0",
+    "history": "4.10.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "i18next": "^19.8.2",
     "identity-obj-proxy": "3.0.0",
