--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
   "parser": "@typescript-eslint/parser",
   "ignorePatterns": ["serviceWorker.js"],
   "rules": {
+    "prettier/prettier": 2,
     "@typescript-eslint/member-delimiter-style": 0,
     "@typescript-eslint/no-empty-interface": 0,
     "@typescript-eslint/camelcase": 0
